gateway-migration/podinfo/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: podinfo
  labels:
    app.kubernetes.io/name: podinfo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/managed-by: argo-rollouts
  ports:
    - name: http
      port: 9898
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-canary
  namespace: podinfo
  labels:
    app.kubernetes.io/name: podinfo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/managed-by: argo-rollouts
  ports:
    - name: http
      port: 9898
      targetPort: http
      protocol: TCP
