gateway-migration/podinfo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-https
  namespace: podinfo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - podinfo.webdemoapp.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: podinfo
          port: 9898
          weight: 100
        - name: podinfo-canary
          port: 9898
          weight: 0
